DATE        AUTHOR      CHANGE
----------- ----------- -------------------------------------------------------
Jul-31-2009 patrick     The gadget::InputArea creating a gadget::Event is now
                        associated with the created gadget::Event object.
                        NEW VERSION: 1.3.23
Apr-19-2009 patrick     Added handling of mouse scroll events in the X and Y
                        axes as first class mouse events. For the old behavior
                        of treating them as button presses, recognizing left
                        and right scrolling has been added.
                        NEW VERSION: 1.3.22
Mar-24-2009 patrick     Allow mouse locking in keyboard/mouse input areas to be
		        disabled through the configuration.
                        NEW VERSION: 1.3.21
Apr-18-2008 patrick     Added gadget::FullPositionXformFilter.
                        NEW VERSION: 1.3.20
Feb-25-2008 dshipton    Refactored cluster networking to eliminate cosstly
                        back-to-back writes.
                        NEW VERSION: 1.3.19
Dec-30-2007 patrick     Moved analog data normalization to gadget::AnalogProxy
                        so that analog device drivers need not perform any
                        normalization of data read from the hardware. The raw,
                        unormalized analog data can now be queried using
                        gadget::AnalogProxy::getRawData(). The data returned by
                        gadget::Analog::getAnalogDataBuffer() is no longer
                        normalized.
                        NEW VERSION: 1.3.18
Dec-30-2007 patrick     Improved const correctness for most input-related
                        classes. This should not break any existing code, but
                        some code could reduce data copying by using const
                        references to returned data.
                        NEW VERSION: 1.3.17