@@ -1,5 +1,7 @@
 DATE        AUTHOR      CHANGE
 ----------- ----------- -------------------------------------------------------
+Oct-17-2009 patrick     Added consumed state tracking to gadget::Event.
+                        NEW VERSION: 1.3.24
 Jul-31-2009 patrick     The gadget::InputArea creating a gadget::Event is now
                         associated with the created gadget::Event object.
                         NEW VERSION: 1.3.23
